[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "blockchain-ai-mcp"
version = "1.0.4"
readme = "README.md"
description = "MCP server for blockchain ai. Features wallet analyzer, transaction tracer, smart contract auditor. From MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/blockchain-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
blockchain_ai_mcp = "server:main"
